Source/WebCore/dom/Document.h
@@ -34,6 +34,7 @@
 #include "DOMTimeStamp.h"
 #include "DocumentTiming.h"
 #include "IconURL.h"
+#include "IntRect.h"
 #include "PageVisibilityState.h"
 #include "QualifiedName.h"
 #include "ScriptExecutionContext.h"
@@ -1371,6 +1372,8 @@ private:
     Timer<Document> m_fullScreenChangeDelayTimer;
     Deque<RefPtr<Element> > m_fullScreenChangeEventTargetQueue;
     bool m_isAnimatingFullScreen;
+    IntRect m_savedPlaceholderFrameRect;
+    RefPtr<RenderStyle> m_savedPlaceholderRenderStyle;
 #endif
 
     int m_loadEventDelayCount;
